[gd_scene load_steps=6 format=3 uid="uid://c8iqgdjpflydn"]

[ext_resource type="Script" path="res://script/compressedDashboard.gd" id="1_i6khi"]
[ext_resource type="Script" path="res://scene/people_plot.gd" id="2_wqg0i"]
[ext_resource type="Script" path="res://scene/money_plot.gd" id="3_jyndj"]
[ext_resource type="Script" path="res://scene/oil_plot.gd" id="4_cn2i2"]
[ext_resource type="Script" path="res://scene/energy_plot.gd" id="5_hirnn"]

[node name="compressedDashboard" type="Control"]
layout_mode = 3
anchors_preset = 11
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -305.0
offset_top = 4.0
offset_right = 2.0
offset_bottom = 4.0
grow_horizontal = 0
grow_vertical = 2
script = ExtResource("1_i6khi")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="peoplePlot" type="Control" parent="VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(300, 159)
layout_mode = 2
script = ExtResource("2_wqg0i")

[node name="moneyPlot" type="Control" parent="VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(300, 159)
layout_mode = 2
script = ExtResource("3_jyndj")

[node name="oilPlot" type="Control" parent="VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(300, 159)
layout_mode = 2
script = ExtResource("4_cn2i2")

[node name="energyPlot" type="Control" parent="VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(300, 159)
layout_mode = 2
script = ExtResource("5_hirnn")
