extends Control

@onready var peoplePlotContainer = %VBoxContainer/peoplePlot
@onready var moneyPlotContainer = %VBoxContainer/moneyPlot
@onready var oilPlotContainer = %VBoxContainer/oilPlot
@onready var energyPlotContainer = %VBoxContainer/energyPlot

# Called when the node is added to the scene
func _ready():
	pass
